style.css
:root {
  --primary-green-light: hsl(148, 38%, 91%);
  --primary-green-medium: hsl(169, 82%, 27%);
  --primary-red: hsl(0, 66%, 54%);
  --neutral-white: hsl(0, 0%, 100%);
  --neutral-grey-medium: hsl(186, 15%, 59%);
  --neutral-grey-dark: hsl(187, 24%, 22%);
}

// <uniquifier>: Use a unique and descriptive class name
// <weight>: Use a value from 200 to 800

.karla-<uniquifier > {
  font-family: "Karla", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: grid;
  place-items: center;
  font-family: "Karla", sans-serif;
  min-height: 100dvh;
  background-color: var(--primary-green-light);
}

section {
  margin-bottom: 1.5rem;
}

label,
input {
  display: block;
  font-size: 1rem;
}

textarea {
  resize: none;
}

input,
textarea {
  margin-top: 0.5rem;
  font-family: "Karla", sans-serif;
  color: var(--neutral-grey-dark);
  border: 2px solid;
  border-color: var(--neutral-grey-medium);
  outline: none;
  border-radius: 0.45rem;
  width: 100%;
}

input {
  padding: 0.75rem 1.25rem;
}

.error-text {
  color: var(--primary-red);
  margin-top: 0.75rem;
  margin-bottom: 0.25rem;
  opacity: 0;
}

.error-text.visible {
  opacity: 1;
}

.error {
  border-color: var(--primary-red);
}

input:focus-visible,
input:active {
  border-color: var(--primary-green-medium);
}

span {
  color: var(--primary-green-medium);
}

form {
  display: flex;
  flex-direction: column;
  background-color: var(--neutral-white);
  padding: 2rem;
  border-radius: 1rem;
  width: min(90%, 42.5rem);
  color: var(--neutral-grey-dark);
}

form h1 {
  margin-bottom: 1.5rem;
}

form .name-section {
  display: flex;
  gap: 1rem;
}

form .name-section div {
  width: 100%;
}

form .query-type-section {
  display: flex;
  flex-direction: column;
}

form .query-type-section .selections-container {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

form .query-type-section .selections-container .selections-input {
  display: flex;
  gap: 1rem;
}

form .query-type-section .selection-box {
  --padding-inline: 1.25rem;

  position: relative;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin-top: 1rem;
  padding: 0.75rem var(--padding-inline);
  color: var(--neutral-grey-dark);
  border: 2px solid;
  border-color: var(--neutral-grey-medium);
  border-radius: 0.45rem;
  width: 100%;
  overflow: hidden;
}

form .query-type-section .selection-box span {
  position: absolute;
  display: block;
  padding-top: 0.75rem;
  padding-left: calc(var(--padding-inline) + 2rem);
  color: var(--neutral-grey-dark);
  inset: 0;
  transition: 250ms;
  transform-origin: center;
}

form .query-type-section .selection-box input[type="radio"] {
  display: grid;
  place-items: center;
  margin: 0;
  padding: 0;
  appearance: none;
  background-color: #fff;
  margin: 0;
  font: inherit;
  color: currentColor;
  width: 1.25rem;
  aspect-ratio: 1;
  border: 0.1rem solid var(--primary-green-medium);
  border-radius: 50%;
  z-index: 2;
}

form .query-type-section .selection-box:has(input[type="radio"]:focus-visible) {
  border-color: var(--primary-green-medium);
}

form .query-type-section .selection-box input[type="radio"]::before {
  content: "";
  width: 0.65rem;
  aspect-ratio: 1;
  border-radius: 50%;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1rem 1rem var(--primary-green-medium);
}

form .query-type-section .selection-box input[type="radio"]:checked::before {
  transform: scale(1);
}

form .query-type-section .selection-box input[type="radio"]:checked ~ span {
  background-color: var(--primary-green-light);
}

form .message-section textarea {
  padding: 0.75rem 1.25rem;
  line-height: 1.5;
  min-height: 6.5rem;
}

form .message-section textarea:focus-visible {
  border-color: var(--primary-green-medium);
}

form .consent-section label {
  position: relative;
  display: flex;
  align-items: center;
}

form .consent-section label p {
  user-select: none;
}

form .consent-section input[type="checkbox"] {
  appearance: none;
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
}

form .consent-section .checkbox {
  display: block;
  position: relative;
  width: 1.25rem;
  aspect-ratio: 1;
  border: 2px solid var(--neutral-grey-medium);
  border-radius: 0.15rem;
  margin-right: 1.25rem;
  cursor: pointer;
}

form .consent-section .checkbox::before {
  content: "";
  position: absolute;
  inset: 0;
  background-color: var(--primary-green-medium);
  transform: scale(0);
  transition: 50ms;
  transform-origin: center;
}

form .consent-section .checkbox::after {
  content: "";
  position: absolute;
  inset: 0.2rem;
  background-color: var(--neutral-white);
  transform: scale(0);
  transform-origin: bottom left;
  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
  transition: 50ms;
}

form .consent-section input[type="checkbox"]:focus-visible ~ .checkbox {
  outline: 2px solid var(--primary-green-medium);
}

form .consent-section input[type="checkbox"]:checked ~ .checkbox {
  border-color: var(--primary-green-medium);
}

form .consent-section input[type="checkbox"]:checked ~ .checkbox::before,
form .consent-section input[type="checkbox"]:checked ~ .checkbox::after {
  transform: scale(1);
}

button#submit {
  outline: none;
  border: none;
  background-color: var(--primary-green-medium);
  text-align: center;
  color: var(--neutral-white);
  letter-spacing: 1px;
  border-radius: 0.5rem;
  padding-block: 1rem;
  font-weight: 500;
  transition: 250ms;
  cursor: pointer;
}

button#submit:hover,
button#submit:active,
button#submit:focus-visible {
  background-color: hsl(169, 82%, 22%);
}

@media (max-width: 576px) {
  form {
    margin-block: 2.5rem;
    padding: 1.5rem;
  }

  form .name-section {
    flex-direction: column;
  }

  form .query-type-section .selections-container {
    flex-direction: column;
    gap: 0.25rem;
  }

  form .message-section textarea {
    min-height: 12.5rem;
  }

  form .consent-section label p {
    line-height: 1.5;
  }
}

